<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我的桩</string>
    <string name="login_title">特来电 · 我的桩</string>
    <string name="login_phone_hint">手机号</string>
    <string name="login_code_hint">短信验证码</string>
    <string name="login_send_code">获取验证码</string>
    <string name="login_send_code_again">重新获取(%1$ds)</string>
    <string name="login_btn">登录</string>
    <string name="login_fail">登录失败</string>
    <string name="main_title">我的充电桩</string>
    <string name="pile_online">在线</string>
    <string name="pile_offline">离线</string>
    <string name="status_idle">空闲</string>
    <string name="status_charging">充电中</string>
    <string name="btn_start">启动充电</string>
    <string name="btn_stop">停止充电</string>
    <string name="refresh">刷新</string>
    <string name="logout">退出登录</string>
    <string name="no_pile">还没有绑定充电桩</string>
    <string name="loading">加载中…</string>
    <string name="err_unknown">出错了，请重试</string>
    <string name="confirm_stop">确定要停止充电吗？</string>
</resources>
